<resources>
    <string name="app_name">MyKrishiMall</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_category">Category</string>
    <string name="menu_order">Order</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_seller_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="linktoSite">
        <a href="https://pmksy.gov.in/">Prime Minister Krishi Sinchayee Yojana</a>
    </string>
    <string name="linktoSite2">
        <a href="https://pib.gov.in/Pressreleaseshare.aspx?PRID=1614115">राष्ट्रीय कृषि बाजार</a>
    </string>

    <string name="linktoSite3">
        <a href="https://dmsouthwest.delhi.gov.in/hi/scheme/%E0%A4%88-%E0%A4%A8%E0%A5%87%E0%A4%B6%E0%A4%A8%E0%A4%B2-%E0%A4%8F%E0%A4%97%E0%A5%8D%E0%A4%B0%E0%A5%80%E0%A4%95%E0%A4%B2%E0%A5%8D%E0%A4%9A%E0%A4%B0-%E0%A4%AE%E0%A4%BE%E0%A4%B0%E0%A5%8D%E0%A4%95/">ई-नेशनल एग्रीकल्चर मार्केट (E-NAM)</a>
    </string>

</resources>